Fix sidebar layout issues on scheme page

--- a/css/streetvisions.css
+++ b/css/streetvisions.css
@@ -18,8 +18,9 @@ section.scheme-show section.sidebar hr {margin-bottom: 15px; border: none; heigh
 section.scheme-show section.sidebar h3 {padding: 0 20px 20px 20px; font-size: 15px; color: white; font-weight: 400;}
 section.scheme-show section.sidebar h4 {color: #f2bd54; font-size: 15px; margin: 15px 0 0 0; padding-left: 20px;}
 section.scheme-show section.sidebar hr.section {margin: 10px 0 20px 20px;}
-section.scheme-show section.sidebar div.map {margin: 0 0 0 40px; width: calc(100% - 40px); height: 200px;}
-section.scheme-show section.sidebar ul.links {padding-left: 40px; padding-top: 5px; height: 50px;}
+section.scheme-show section.sidebar div.map {margin: 10px 0 20px 20px; width: calc(100% - 40px); height: 200px;}
+section.scheme-show section.sidebar p {margin: 10px 0 20px 20px; color: white;}
+section.scheme-show section.sidebar ul.links {margin: 10px 0 20px 20px; padding-left: 0; padding-top: 5px; height: 50px;}
 section.scheme-show section.sidebar ul.links li {display: inline-block; transition: 0.3s; margin-right: 10px;}
 section.scheme-show section.sidebar ul.links li:hover {transform: scale(1.05);}
 section.scheme-show section.sidebar ul.links li a {color: white; list-style: none; text-decoration: none; border: 1px solid white; padding: 10px; border-radius: 0.5em;}
